[bdist_wheel]
# Flag indicating code works for both Python 2 and Python 3.
universal=1

[metadata]
requires-dist=
    cryptography>=1.9
    botocore>=1.12.179

[tool:pytest]
# Test args for pytest; enable coverage for eicproxylibs, emit XML, HTML, and terminal reports.
addopts =
    --verbose
    --cov eicproxylibs
    --cov-report term-missing
    --cov-report xml
    --cov-report html
    tests
